# survival

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  TODO.md  behaviours.cpp  behaviours.h  dialog.cpp  dialog.h  emscripten-template.html  entities.cpp  entities.h  entity.cpp  entity.h  flags.h  font.cpp  font.h  point.h  readme.md  survival.cpp  texture.cpp  texture.h  todo  todo.md  unquarantine.sh  utils.cpp  utils.h  world.cpp  world.h
.github/workflows/: emscripten-deploy.yml  macos-build.yml
src/: Behaviour.h  Behaviours.cpp  Behaviours.h  Color.cpp  Color.h  Entities.cpp  Entities.h  Entity.cpp  Entity.h  EntityBuilder.h  Font.cpp  Font.h  FontColor.cpp  FontColor.h  Game.cpp  Game.h  LightMapPoint.cpp  LightMapPoint.h  LightMapTexture.cpp  LightMapTexture.h  Point.h  Properties.h  Property.cpp  Property.h  Recipe.cpp  Recipe.h  SDLManager.cpp  SDLManager.h  Texture.cpp  Texture.h  Time.h  UI.cpp  UI.h  UIState.cpp  UIState.h  World.cpp  World.h  behaviours.cpp  behaviours.h  dialog.cpp  (+20 more)
src/Behaviour/: Behaviour.h  InteractableBehaviour.h
src/Behaviour/AI/: AttachmentBehaviour.cpp  AttachmentBehaviour.h  ChaseAndAttackBehaviour.cpp  ChaseAndAttackBehaviour.h  HostilityBehaviour.cpp  HostilityBehaviour.h  SeekHomeBehaviour.cpp  SeekHomeBehaviour.h  WanderAttachBehaviour.h  WanderBehaviour.cpp  WanderBehaviour.h
src/Behaviour/Item/: ApplyableBehaviour.h  HealingItemBehaviour.cpp  HealingItemBehaviour.h  KeepStockedBehaviour.h
src/Entity/: BunnyHoleEntity.h  ChestEntity.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  EquipmentSlot.cpp  EquipmentSlot.h  FireEntity.cpp  FireEntity.h  PlayerEntity.cpp  PlayerEntity.h  WaterEntity.h
src/Entity/Building/: BuildingWallEntity.cpp  BuildingWallEntity.h  DoorEntity.cpp  DoorEntity.h
src/Entity/Items/: BagEntity.cpp  BagEntity.h  TorchEntity.cpp  TorchEntity.h  WaterskinEntity.cpp  WaterskinEntity.h
src/Entity/Items/Food/: AppleEntity.cpp  AppleEntity.h  BananaEntity.cpp  BananaEntity.h  BerryEntity.cpp  BerryEntity.h  CorpseEntity.cpp  CorpseEntity.h  EatableEntity.cpp  EatableEntity.h
src/Entity/Items/Healing/: BandageEntity.cpp  BandageEntity.h
src/Entity/Items/Materials/: GrassTuftEntity.cpp  GrassTuftEntity.h  TwigEntity.cpp  TwigEntity.h
src/Entity/NPCs/: BunnyEntity.cpp  BunnyEntity.h  CatEntity.cpp  CatEntity.h  GlowbugEntity.cpp  GlowbugEntity.h  WolfEntity.cpp  WolfEntity.h
src/Entity/Sources/: BushEntity.cpp  BushEntity.h  GrassEntity.cpp  GrassEntity.h
src/Entity/UI/: StatusUIEntity.cpp  StatusUIEntity.h
src/Property/: Property.h
src/Property/Properties/: AdditionalCarryWeightProperty.cpp  AdditionalCarryWeightProperty.h  CraftingMaterialProperty.cpp  CraftingMaterialProperty.h  EatableProperty.cpp  EatableProperty.h  EquippableProperty.cpp  EquippableProperty.h  LightEmittingProperty.cpp  LightEmittingProperty.h  MeleeWeaponDamageProperty.cpp  MeleeWeaponDamageProperty.h  PickuppableProperty.cpp  PickuppableProperty.h  WaterContainerProperty.cpp  WaterContainerProperty.h
src/Recipe/: Recipe.h  RecipeManager.cpp  RecipeManager.h
src/Recipe/Recipes/: BagRecipe.cpp  BagRecipe.h  BandageRecipe.cpp  BandageRecipe.h  FireRecipe.cpp  FireRecipe.h  TorchRecipe.cpp  TorchRecipe.h
src/UI/: MessageBoxRenderer.cpp  MessageBoxRenderer.h  NotificationMessageRenderer.cpp  NotificationMessageRenderer.h
src/UI/Screens/: CraftingScreen.cpp  CraftingScreen.h  DebugScreen.cpp  DebugScreen.h  EquipmentScreen.cpp  EquipmentScreen.h  HelpScreen.cpp  HelpScreen.h  InspectionDialog.cpp  InspectionDialog.h  InventoryScreen.cpp  InventoryScreen.h  LootingDialog.cpp  LootingDialog.h  NotificationMessageScreen.cpp  NotificationMessageScreen.h  Screen.cpp  Screen.h  Screens.h
src/UI/States/: UIStateMacro.h
src/UI/States/CraftingScreenState/: ChoosingBuildPositionCraftingScreenState.cpp  ChoosingBuildPositionCraftingScreenState.h  ChoosingIngredientCraftingScreenState.cpp  ChoosingIngredientCraftingScreenState.h  ChoosingMaterialCraftingScreenState.cpp  ChoosingMaterialCraftingScreenState.h  ChoosingRecipeCraftingScreenState.cpp  ChoosingRecipeCraftingScreenState.h  CraftingScreenState.h
src/UI/States/DebugScreenState/: ChoosingActionDebugScreenState.cpp  ChoosingActionDebugScreenState.h  ChoosingTimeOfDayDebugScreenState.cpp  ChoosingTimeOfDayDebugScreenState.h  DebugScreenState.h
src/UI/States/EquipmentScreenState/: ChoosingActionEquipmentScreenState.cpp  ChoosingActionEquipmentScreenState.h  ChoosingNewEquipmentScreenState.cpp  ChoosingNewEquipmentScreenState.h  ChoosingSlotEquipmentScreenState.cpp  ChoosingSlotEquipmentScreenState.h  EquipmentScreenState.h
src/UI/States/InspectionDialogState/: ChoosingPositionInspectionDialogState.cpp  ChoosingPositionInspectionDialogState.h  InspectionDialogState.h  ViewingDescriptionInspectionDialogState.cpp  ViewingDescriptionInspectionDialogState.h
src/UI/States/InventoryScreenState/: InventoryScreenState.h  ViewingDescriptionInventoryState.cpp  ViewingDescriptionInventoryState.h  ViewingInventoryState.cpp  ViewingInventoryState.h
src/UI/States/LootingDialogState/: LootingDialogState.h  ShowingTooMuchWeightMessageLootingDialogState.cpp  ShowingTooMuchWeightMessageLootingDialogState.h  ViewingDescriptionLootingDialogState.cpp  ViewingDescriptionLootingDialogState.h  ViewingLootingDialogState.cpp  ViewingLootingDialogState.h
survival-xcode/survival-xcode.xcodeproj/: project.pbxproj
survival-xcode/survival-xcode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
survival-xcode/survival-xcode.xcodeproj/project.xcworkspace/xcuserdata/jbentley.xcuserdatad/: UserInterfaceState.xcuserstate
survival-xcode/survival-xcode.xcodeproj/xcuserdata/jbentley.xcuserdatad/xcschemes/: xcschememanagement.plist
